<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    >

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?android:attr/actionBarSize"
      android:background="@color/grey_h"
      android:theme="@style/ThemeOverlay.AppCompat.Dark"
      app:navigationIcon="?attr/homeAsUpIndicator"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="?android:attr/actionBarSize"
        android:text="@string/wallet_creation"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />

  </android.support.v7.widget.Toolbar>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical"
      >

    <LinearLayout
        android:id="@+id/linlayout_fragmenthome_public_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_margin="8dp"
          android:gravity="center"
          android:text="New ZIL Wallet ?"
          android:textColor="@color/grey_h"
          android:textSize="16sp"
          />
      <Button
          android:id="@+id/button_new_account"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:background="@drawable/button_send"
          android:text="GENERATE NEW WALLET"
          android:textAppearance="@style/TextAppearance.Title"
          android:textColor="@color/White"
          />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:layout_margin="16dp"
          android:gravity="center"
          android:text="already have one ?"
          android:textColor="@color/grey_h"
          android:textSize="16sp"
          />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColorHint="@color/app_black"
          >
        <EditText
            android:id="@+id/editText_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/private_key"
            android:inputType="text|textMultiLine|textNoSuggestions"
            android:lines="2"
            android:textColor="@color/app_black"
            android:textColorHint="@color/app_black"
            android:textSize="16sp"
            android:importantForAutofill="no"
            />
      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/button_new_account_import"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:background="@drawable/button_send"
          android:text="IMPORT WALLET"
          android:textAppearance="@style/TextAppearance.Title"
          android:textColor="@color/White"
          />
    </LinearLayout>

  </LinearLayout>

</RelativeLayout>