...
<resources>

  <string name="app_name">xZIL</string>
  <string name="action_settings">Settings</string>
  <string name="send_feedback">Send Feedback</string>
  <string name="version">Beta 0.1</string>
  <string name="dialog_action_ok">OK</string>
  <string name="generic_error_title">Error</string>
  <string name="scan_barcode">Scan QR Code</string>
  <string name="we_need_camera_permission">We need the camera permission in order to scan the QR
    Code
  </string>
  <string name="xcontinue">CONTINUE</string>
...
