<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


  <LinearLayout
      android:id="@+id/linLayout_new_account_all"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Your Private Key"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/zen_color"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="It's up to you to store it somewhere safe (ex: paper, hardware wallet etc.)"
        android:textColor="@color/appcolor_grey"
        android:textSize="16sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_send"
        android:orientation="horizontal"
        android:padding="8dp"
        >
      <TextView
          android:id="@+id/textView_private_key"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="private key..."
          android:textColor="@color/white"
          android:textSize="20sp"
          />
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkBox_seed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="0"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="I confirm that I stored it"
        android:textColor="@color/Black"
        android:textSize="16sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        >

      <Button
          android:id="@+id/btn_private_key_clipboard"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginRight="4dp"
          android:layout_weight="1"
          android:background="@drawable/button_send"
          android:text="CLIPBOARD"
          android:textAppearance="@style/TextAppearance.Title"
          android:textColor="@color/White"
          android:textStyle="bold"
          style="?android:attr/borderlessButtonStyle"
          />

      <Button
          android:id="@+id/btn_continue"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginLeft="4dp"
          android:layout_weight="1"
          android:background="@drawable/button_send"
          android:text="CONTINUE"
          android:textAppearance="@style/TextAppearance.Title"
          android:textColor="@color/White"
          android:textStyle="bold"
          style="?android:attr/borderlessButtonStyle"
          />
    </LinearLayout>

  </LinearLayout>
</RelativeLayout>